--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -11719,7 +11719,7 @@ svg.pulse-svg {
 
 [direction="rtl"] {
   text-align: right; }
-  [direction="rtl"] .deznav {
+  [direction="rtl"] . {
     text-align: right; }
     [direction="rtl"] .deznav .metismenu ul:after {
       left: auto;
